Fix section gap

--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -1,5 +1,6 @@
 h2
   padding-bottom: 0
+  margin-top: 0
 
 .section-about p
   max-width: 800px
